# dcentric-health-hometest

./: README.md
chatroom-backend/: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  playground.ipynb  pyproject.toml  pyrightconfig.json  sql_app.db  ws_client.py
chatroom-backend/migrations/: env.py
chatroom-backend/src/: config.py  database.py  deps_container.py  envs.py  ws_connection_manager.py
chatroom-backend/src/entity/: chat.py  user.py
chatroom-backend/src/internal/: types.py
chatroom-backend/src/models/: __init__.py  base.py  chat.py  user.py
chatroom-backend/src/repositories/: chat_repository.py  chat_room_repository.py  user_repository.py
chatroom-backend/src/routes/: chat_room_routes.py  chat_routes.py  user_routes.py  ws_routes.py
chatroom-backend/src/services/: chat_room_service.py  chat_service.py  user_service.py
chatroom-backend/src/utils/: chiper_utils.py  string_utils.py
chatroom-backend/tests/: conftest.py  test_chat_api.py  test_chat_room_api.py
chatroom-client/: app.json  babel.config.js  constants.ts  metro.config.js  package-lock.json  package.json
chatroom-client/api/: Chat.ts  Room.ts  chat.api.ts  room.api.ts
chatroom-client/app/: _layout.tsx  home.tsx  index.tsx
chatroom-client/app/room/: [id].tsx
chatroom-client/ifaces/: ChatIface.ts  Room.ts  RoomIface.ts  User.ts  room.iface.ts
chatroom-client/utils/: chiper-utils.ts  cipher.utils.ts
